--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@timelaps/trie",
   "version": "1.0.0",
-  "description": "",
+  "description": "persistent trie structures",
   "main": "index.js",
   "scripts": {
     "test": "node test.js",
@@ -22,15 +22,15 @@
     "@timelaps/batterie": "^1.0.73"
   },
   "dependencies": {
-    "@timelaps/array": "^1.0.11",
+    "@timelaps/array": "^1.0.12",
     "@timelaps/classy": "^1.0.17",
     "@timelaps/fn": "^1.0.11",
     "@timelaps/hacks": "^1.0.5",
-    "@timelaps/is": "^1.0.13",
+    "@timelaps/is": "^1.0.14",
     "@timelaps/n": "^1.0.26",
-    "@timelaps/number": "^1.0.2",
+    "@timelaps/number": "^1.0.3",
     "@timelaps/object": "^1.0.20",
     "@timelaps/string": "^1.0.2",
-    "@timelaps/to": "^1.0.7"
+    "@timelaps/to": "^1.0.8"
   }
 }
